# NN_based_adaptive_speed_controller

./: nn_controller.h  setpoint_task.c  setpoint_task.h
Controller testing and evaluation/: Controller_Evaluation.py  hybrid1.csv  hybrid_alpha_6v.csv  hybrid_no_alpha_6v.csv  step_up_and_down.csv
ESP32-S3 Motor Speed Controller/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ESP32-S3 Motor Speed Controller/.devcontainer/: devcontainer.json
ESP32-S3 Motor Speed Controller/main/: CMakeLists.txt  NN_based_speed_controller.c  external_setpoint.c  external_setpoint.h  motor_nn_weights.h  nn_controller.c  setpoint_task.c  setpoint_task.h  web_dashboard.c  web_dashboard.h
Neural Network training/: Final_NN_train_script_10_more_epochs.ipynb  Initial_NN_train_script.ipynb  Initial_training.ipynb  Step with higher step.csv  Untitled2.ipynb  sine_changing_offset.csv  sine_changing_offset_high.csv  sine_changing_offset_periodic.csv  sine_static_offset.csv  step.csv  step_down.csv
System C simulation/: initial_NN_6_inputs.h  initial_NN_systemC_simulation.cpp  systemc_pi_ann.cpp
System Identification/: MotorSystemIdentifications.m  pbrs500hz.txt  pbrs500hztestdata.txt  pidtuner.m
